--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(unit_tests 
-    union_find_test.cpp
+    union_find_parents_test.cpp
 )
 
 target_link_libraries(unit_tests 
@@ -7,5 +7,7 @@ target_link_libraries(unit_tests
     GTest::gtest_main 
     core_lib
 )
+
+target_compile_definitions(unit_tests PRIVATE UNIT_TEST)
 
 gtest_discover_tests(unit_tests)
