Refactor EGraph, ENode, and EClass: update data structures, add new methods, and improve unit tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(core_lib STATIC 
-    union_find.cpp 
-    union_find.h
+    union_find.cpp
+    e_node.cpp
+    e_graph.cpp
+    e_class.cpp 
 )
 target_include_directories(core_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
