Refactor EGraph and EClass: update node storage to use unique pointers, enhance union-find operations, and add comprehensive unit tests for EGraph functionality and implement rebuild function

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(unit_tests 
     union_find_test.cpp
-    enode_test.cpp
+    e_node_test.cpp
+    e_graph_test.cpp
 )
 
 target_link_libraries(unit_tests 
